--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,73 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.news_container{
+  margin-top: 7rem !important;
+}
+.nav_container{
+  display: flex !important;
+  justify-content: space-evenly !important;
+}
+.nav_lang_link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card{
+  align-items: center;
+}
+.card-body{
+  text-align: center;
+}
+.nav_title{
+  color: brown !important;
+  font-weight: bold !important;
+  font-style: italic !important;
+  text-decoration: underline !important;
+}
+.link_item > .nav-item  > .nav-link{
+  color: rgb(42, 42, 152) !important;
+  font-weight: bold !important;
+}
+@media only screen and (max-width: 991px){
+  .nav_link:not(.show){
+    display: flex !important;
+  }
+  .navbar-toggler{
+    display: none !important;
+  }
+  .link_item{
+    display: flex !important;
+    flex-direction: row !important;
+  }
+  .link_item .nav-item{
+    margin-right: 2% !important;
+}
+}
+@media only screen and (max-width: 767px){
+  .news_container{
+    margin-top: 9rem !important;
+  }
+}
+
+/* @media only screen and (max-width: 560px){
+  .nav_link{
+    display: none !important;
+  }
+  .navbar-toggler{
+    display: block !important;
+  }
+  .nav_lang_link{
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: flex-start !important;
+  }
+  .link_item{
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+  }
+} */
